# goit-pythonweb-hw-03

./: error.html  http_requests.py  index.html  main.py  message.html  pyproject.toml
storage/: data.json
templates/: error.html  index.html  message.html  messages.jinja
