[project]
name = "goit-pythonweb-hw-03"
version = "0.1.0"
description = ""
authors = [
    {name = "Nataliia Smalchenko",email = "daalang@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
